# PerfSeer-predictor

./: .gitignore  Prefseer_research_report.md  README.md  hardware_generalization_todo.md  pyproject.toml  record.md  requirements.txt  run_full_experiment.sh
examples/: predict_source_models.py  simple_mlp.py  simple_vgg.py
nrp_calibration_pack/: Dockerfile  GOLDEN_DATA_GUIDE.md  README.md  __init__.py  build_pack.py  generate_model_sources.py  submit_nrp_calibration.sh
nrp_calibration_pack/models/: __init__.py
nrp_calibration_pack/profile/: __init__.py  generated_model_runtime.py  run_profile.py
runs/full/: seernet_metric0_train_util.curve.json  seernet_metric1_train_mem.curve.json  seernet_metric2_train_time.curve.json  seernet_metric3_infer_util.curve.json  seernet_metric4_infer_mem.curve.json  seernet_metric5_infer_time.curve.json
scripts/: check_precision_transfer_results.py  materialize_experiment_config.py  materialize_precision_dataset.py  plot_results.py  run_deploy_matrix.py  run_precision_transfer_flow.py  run_sweep.py  select_best_accuracy.py  summarize_results.py
src/perfseer/: __init__.py  data.py  eval.py  metrics.py  model.py  train.py
src/perfseer-optimized/: __init__.py  bench.py  calibration.py  data.py  deploy.py  eval.py  eval_deploy.py  losses.py  metrics.py  model.py  pcgrad.py  perfseer_coding_agent_plan.md  train.py
src/perfseer-optimized/configs/: baseline.yaml  distill_student.yaml  (+5 more)
src/perfseer_source_converter/: __init__.py  convert.py  converter.py
tests/: test_nrp_calibration_pack.py  test_source_converter.py
(+19 files in other folders)
